k8s/minikube-demo-namespace.yml
  # create namespace
apiVersion: v1
kind: Namespace
metadata:
  name: web-app_namespace
  labels:
    name: web-app_namespace
